tests/spec/emit/snapshots/const_inside_function_body.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    const MAX = 100
    let x = MAX + 1
  }
---
package main

func main() {
	const Max int = 100
	_ = Max + 1
}
