tests/spec/emit/snapshots/const_simple.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  const MAX_SIZE = 100
  
  fn test() -> int {
    MAX_SIZE
  }
---
package main

const MaxSize int = 100

func test() int {
	return MaxSize
}
