tests/spec/emit/snapshots/const_string.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  const GREETING = "Hello, World!"
  
  fn test() {
    fmt.Print(GREETING)
  }
---
package main

import "fmt"

const Greeting = "Hello, World!"

func test() {
	fmt.Print(Greeting)
}
