tests/spec/emit/snapshots/constrained_impl_block_emits_bound.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Displayable {
    fn display() -> string
  }
  
  struct Labeled<T: Displayable> {
    label: string,
    value: T,
  }
  
  impl<T: Displayable> Labeled<T> {
    fn show(self) -> string {
      self.label
    }
  }
---
package main

type Displayable interface {
	display() string
}

type Labeled[T Displayable] struct {
	label string
	value T
}

func (l Labeled[T]) show() string {
	return l.label
}
