tests/spec/emit/snapshots/continue_in_guarded_match_in_loop.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn sum_positives(items: Slice<int>) -> int {
    let mut sum = 0
    for item in items {
      match item {
        n if n > 0 => sum += n,
        _ => continue,
      }
    }
    sum
  }
---
package main

func sumPositives(items []int) int {
	sum := 0
loop_1:
	for _, item := range items {
	match_1:
		for {
			{
				n := item
				if n > 0 {
					sum += n
					break match_1
				}
			}
			{
				continue loop_1
			}
		}
	}
	return sum
}
