tests/spec/emit/snapshots/continue_in_match_in_loop.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test(items: Slice<int>) -> int {\n  let mut sum = 0\n  for item in items {\n    match item {\n      0 => continue,\n      n => sum += n,\n    }\n  }\n  sum\n}\n"
---
package main

func test(items []int) int {
	sum := 0
loop_1:
	for _, item := range items {
		if item == 0 {
			continue loop_1
		}
		sum += item
	}
	return sum
}
